--- a/.gitignore
+++ b/.gitignore
@@ -13,14 +13,7 @@ target/
 *.iml
 *.ipr
 
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+.logs
 
 ### NetBeans ###
 /nbproject/private/
@@ -37,3 +30,4 @@ build/
 
 ### Mac OS ###
 .DS_Store
+logs/
