--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,20 +5,24 @@ spring:
   h2:
     console:
       enabled: true
+      path: /h2-console
+      settings:
+        web-allow-others: false
 
   datasource:
     url: jdbc:h2:mem:inditex
     driver-class-name: org.h2.Driver
     username: sa
-    password: admin
-
+    password: inditex
+    initialization-mode: always
+    schema: classpath:data.sql
 
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: create-drop
-    show-sql: true
+    properties:
+      hibernate:
+        show-sql: true
+        format_sql: true
     defer-datasource-initialization: true
-  sql:
-    init:
-      data-locations: classpath:import.sql
