--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,9 @@ server:
   port: 8080
 
 spring:
+  mvc:
+    format:
+      date-time: yyyy-MM-dd'T'HH:mm:ss
   h2:
     console:
       enabled: true
